# ComfyUI-Qwen3-ASR

./: LICENSE  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
workflows/: qwen3-asr.json
